--- a/02–Architecture/package.json
+++ b/02–Architecture/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.2",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "release": "release-it"
@@ -21,6 +22,9 @@
     "jest": "^29.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.25.0",
+    "babel-jest": "^29.7.0",
     "release-it": "^17.6.0"
   }
 }
