--- a/02–Architecture/package.json
+++ b/02–Architecture/package.json
@@ -18,13 +18,11 @@
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "jest": "^29.7.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.25.0",
     "babel-jest": "^29.7.0",
-    "release-it": "^17.6.0"
+    "release-it": "^17.6.0",
+    "jest": "^29.7.0"
   }
 }
