--- a/06-DevOps/package.json
+++ b/06-DevOps/package.json
@@ -12,6 +12,9 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@inertiajs/vue3": "^1.2.0"
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@inertiajs/vue3": "^1.2.0",
+        "vue": "^3.4.34"
     }
 }
