--- a/06-DevOps/Dockerfile
+++ b/06-DevOps/Dockerfile
@@ -1,43 +1,40 @@
-FROM php
-  
-# Installer les dépendances nécessaires
-RUN apt-get update && apt-get install -y \
-  git \
-  curl \
-  libpng-dev \
-  libjpeg-dev \
-  libfreetype6-dev \
-  locales \
-  zip \
-  unzip \
-  npm \
-  nodejs \
-  && docker-php-ext-configure gd --with-freetype --with-jpeg \
-  && docker-php-ext-install pdo pdo_mysql gd
+# FROM php
 
-# Installer Composer
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+# # Install necessary dependencies
+# RUN apt-get update && apt-get install -y \
+#   git \
+#   curl \
+#   locales \
+#   zip \
+#   unzip \
+#   npm \
+#   nodejs \
+#   && docker-php-ext-configure gd --with-freetype --with-jpeg \
+#   && docker-php-ext-install pdo pdo_mysql gd
 
-# Définir le répertoire de travail
-WORKDIR /var/www
+# # Install Composer
+# COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-# Copier le fichier Composer et installer les dépendances PHP
-COPY composer.json composer.lock ./
-RUN composer install --prefer-dist --no-scripts --no-dev --no-autoloader
+# # Set the working directory
+# WORKDIR /var/www
 
-# Copier le package.json et installer les dépendances Node.js
-COPY package.json package-lock.json ./
-RUN npm install
+# # Copy the Composer file and install PHP dependencies
+# COPY composer.json composer.lock ./
+# RUN composer install --prefer-dist --no-scripts --no-dev --no-autoloader
 
-# Copier le reste du code de l'application
-COPY . .
+# # Copy the package.json file and install Node.js dependencies
+# COPY package.json package-lock.json ./
+# RUN npm install
 
-# Compiler les assets front-end
-RUN npm run build
+# # Copy the rest of the application code
+# COPY . .
 
-# Changer les permissions du répertoire de stockage et de cache
-RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache
+# # Compile the front-end assets
+# RUN npm run build
 
-# Exposer le port 9000 et démarrer PHP-FPM
-EXPOSE 9000
-CMD ["php-fpm"]
+# # Change the permissions of the storage and cache directory
+# RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache
+
+# # Expose port 9000 and start PHP-FPM
+# EXPOSE 9000
+# CMD ["php-fpm"]
