--- a/06-DevOps/docker-compose.yml
+++ b/06-DevOps/docker-compose.yml
@@ -1,13 +1,29 @@
-version: "3.9"
-services:
-    mysql:
-        image: mysql:latest
-        restart: always
-        environment:
-            MYSQL_ROOT_PASSWORD: root
-            MYSQL_DATABASE: Picard
-    adminer:
-        image: adminer
-        restart: always
-        ports:
-            - 8080:8080
+# version: "3.9"
+# services:
+#     mysql:
+#         image: mysql:latest
+#         environment:
+#             MYSQL_DATABASE: Picard
+#             MYSQL_ROOT_PASSWORD: root
+#         volumes:
+#             - dbdata:/var/lib/mysql
+#         networks:
+#             - app-network
+
+#     adminer:
+#         image: adminer
+#         restart: always
+#         ports:
+#             - 8080:8080
+    
+#     app:
+#         build:
+#             context: .
+#             dockerfile: Dockerfile
+#         volumes:
+#             - .:/var/www
+#         networks:
+#             - app-network
+
+#     volumes:
+#         dbdata:
