--- a/06-DevOps/docker-compose.yml
+++ b/06-DevOps/docker-compose.yml
@@ -1,24 +1,37 @@
-version: '3' 
+version: "3.9"
 services:
-  laravel-docker:
-    container_name: mine-docker 
-    build: .  
-    volumes:
-    - .:/var/www/html
-    ports:
-    - 9005:80
+    mysql:
+        image: mysql:latest
+        environment:
+            MYSQL_DATABASE: Picard
+            MYSQL_ROOT_PASSWORD: root
+        volumes:
+            - dbdata:/var/lib/mysql
 
-  mysql:
-    image: mysql:latest 
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: Picard 
-    ports:
-    - 3305:3306
+    # adminer:
+    #     image: adminer
+    #     restart: always
+    #     ports:
+    #         - 8080:8080
 
-  phpmyadmin:
-    image: phpmyadmin:latest 
-    ports:
-      - 9015:80 
-    environment:
-      - PMA_ARBITRARY=1
+    app:
+        build:
+            context: .
+            dockerfile: Dockerfile
+        volumes:
+            - .:/var/www
+        depends_on:
+            - mysql
+            - webserver
+
+    webserver:
+        image: nginx:alpine
+        tty: true
+        ports:
+            - "8000:80"
+        volumes:
+            - ./:/var/www
+            - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+
+volumes:
+    dbdata:
