--- a/06-DevOps/package.json
+++ b/06-DevOps/package.json
@@ -6,7 +6,6 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.7",
         "@vitejs/plugin-vue": "^5.1.1",
         "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
@@ -16,9 +15,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^1.2.0",
-        "vue": "^3.4.34"
+        "@tailwindcss/forms": "^0.5.7"
     }
 }
